--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -10,7 +10,7 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   <context-param>
-  		<param-name>defaultHtmlExcape</param-name>
+  		<param-name>defaultHtmlEscape</param-name>
   		<param-value>false</param-value>
   </context-param>
   
